--- a/public_services.html
+++ b/public_services.html
@@ -33,7 +33,7 @@
     <main>
         <section id="services">
             <div class="container">
-                <div class="service-grid"> 
+                <div class="services-grid"> 
                     <div class="service">
                         <img src="images/pexels-gustavo-fring-8770695.jpg" alt="Health Promotion & Education">
                         <h3>Health Promotion & Education</h3>
@@ -43,7 +43,9 @@
                             <li>Distribution of health information</li>
                         </ul>
                     </div>
-
+                    <br>
+                    <br>
+                    <br>
                     <div class="service">
                         <img src="images/wash 1.webp" alt="Environmental Health">
                         <h3>Environmental Health</h3>
@@ -53,7 +55,9 @@
                             <li>Waste management</li>
                         </ul>
                     </div>
-
+<br>
+<br>
+<br>
                     <div class="service">
                         <img src="images/hurricane.jpeg" alt="Disaster Preparedness & Response">
                         <h3>Disaster Preparedness & Response</h3>
@@ -63,7 +67,9 @@
                             <li>Coordination with other agencies</li>
                         </ul>
                     </div>
-
+                    <br>
+                    <br>
+                    <br>
                     <div class="service">
                         <img src="images/image_2024-12-17_190550144-transformed.png" alt="Communicable Disease Control">
                         <h3>Communicable Disease Control</h3>
@@ -73,7 +79,9 @@
                             <li>Tuberculosis control</li>
                         </ul>
                     </div>
-
+                    <br>
+                    <br>
+                    <br>
                     <div class="service">
                         <img src="images/blood.webp" alt="Laboratory Services">
                         <h3>Laboratory Services</h3>
@@ -82,26 +90,9 @@
                             <li>Diagnostic testing</li>
                         </ul>
                     </div>
-
-                    <div class="service">
-                        <img src="images/chart.webp" alt="Data Collection & Analysis">
-                        <h3>Data Collection & Analysis</h3>
-                        <ul>
-                            <li>Health data collection</li>
-                            <li>Data analysis and interpretation</li>
-                            <li>Informing health policies</li>
-                        </ul>
-                    </div>
-
-                    <div class="service">
-                        <img src="images/speech.png" alt="Advocacy & Policy Development">
-                        <h3>Advocacy & Policy Development</h3>
-                        <ul>
-                            <li>Advocating for health-promoting policies</li>
-                            <li>Developing and implementing health programs</li>
-                            <li>Collaborating with stakeholders</li>
-                        </ul>
-                    </div>
+                    <br>
+                    <br>
+                    <br>
                 </div> 
             </div>
         </section>
