--- a/public_services.html
+++ b/public_services.html
@@ -36,59 +36,45 @@
                 <div class="services-grid"> 
                     <div class="service">
                         <img src="images/pexels-gustavo-fring-8770695.jpg" alt="Health Promotion & Education">
-                        <h3>Health Promotion & Education</h3>
-                        <ul>
-                            <li>Public awareness campaigns</li>
-                            <li>Health education programs</li>
-                            <li>Distribution of health information</li>
-                        </ul>
+                        <h3>Health Promotion & Education - </h3>
+                        <br>
+                            <p>The Ministry of Health is committed to improving public health by conducting awareness campaigns, providing health education programs, and distributing essential health information.<p>
                     </div>
                     <br>
                     <br>
                     <br>
                     <div class="service">
                         <img src="images/wash 1.webp" alt="Environmental Health">
-                        <h3>Environmental Health</h3>
-                        <ul>
-                            <li>Food safety and sanitation</li>
-                            <li>Vector control</li>
-                            <li>Waste management</li>
-                        </ul>
+                        <h3>Environmental Health -</h3>
+                        <br>
+                            <p>The Ministry of Health works to improve environmental health by ensuring food safety and sanitation, controlling disease-carrying vectors, and implementing effective waste management strategies.</p>
                     </div>
 <br>
 <br>
 <br>
                     <div class="service">
                         <img src="images/hurricane.jpeg" alt="Disaster Preparedness & Response">
-                        <h3>Disaster Preparedness & Response</h3>
-                        <ul>
-                            <li>Emergency medical services</li>
-                            <li>Disaster response plans</li>
-                            <li>Coordination with other agencies</li>
-                        </ul>
+                        <h3>Disaster Preparedness & Response -</h3>
+                        <br>
+                            <p>The Ministry of Health is committed to protecting public health during emergencies. This includes providing essential emergency medical services, developing comprehensive disaster response plans, and collaborating with other agencies to ensure a coordinated response.</p>
                     </div>
                     <br>
                     <br>
                     <br>
                     <div class="service">
                         <img src="images/image_2024-12-17_190550144-transformed.png" alt="Communicable Disease Control">
-                        <h3>Communicable Disease Control</h3>
-                        <ul>
-                            <li>HIV/AIDS prevention and control</li>
-                            <li>Vaccination programs</li>
-                            <li>Tuberculosis control</li>
-                        </ul>
+                        <h3>Communicable Disease Control -</h3>
+                        <br>
+                           <p>The Ministry of Health is committed to preventing and controlling the spread of communicable diseases.This includes implementing HIV/AIDS prevention and control programs, administering vaccinations, and managing tuberculosis cases.</p>
                     </div>
                     <br>
                     <br>
                     <br>
                     <div class="service">
                         <img src="images/blood.webp" alt="Laboratory Services">
-                        <h3>Laboratory Services</h3>
-                        <ul>
-                            <li>Blood testing</li>
-                            <li>Diagnostic testing</li>
-                        </ul>
+                        <h3>Laboratory Services -</h3>
+                        <br>
+                        <p>The Ministry of Health offers a range of laboratory services to support diagnosis and treatment. These services include blood tests and various diagnostic tests.</p>
                     </div>
                     <br>
                     <br>
