--- a/testimonials.html
+++ b/testimonials.html
@@ -31,23 +31,9 @@
 
     <main>
 <br>
-
+<h1>Testimonials</h1>
+<sub>The testimonials of the people submitted</sub>
 <div class="testimonial-container">
-    <div class="testimonial">
-        <p>"The staff at San Fernando General Hospital were incredibly kind and helpful.
-		They made me feel comfortable and cared for during my stay." - John Doe</p>
-    </div>
-
-    <div class="testimonial">
-        <p>"I was very impressed with the efficiency of the vaccination program. 
-		The staff were well-organized and the process was quick and painless." - Jane Smith</p>
-    </div>
-
-    <div class="testimonial">
-        <p>"The community health center provided excellent primary care services. 
-		The doctor was very knowledgeable and took the time to listen to my concerns." Levi John</p> 
-    </div>
-	
 	<div class="testimonial">
         <p>"I recently visited Point Fortin Hospital to donate blood, and I was thoroughly impressed by the care I received.
 		The staff were friendly, professional, and made me feel at ease throughout the process. 
