--- a/health_services.html
+++ b/health_services.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <img src="" class="health-service">
+        <div class="health-service"></div>
         <div class="container">
             <h1 class="service-h1">Health Services</h1>
             <nav>
@@ -51,8 +51,8 @@
     <main>
 
 
-        <section id="intro">
-            <div class="container">
+        <section id="intro"></section>
+            <div class="container"></div>
                 <h2>Welcome to the Ministry of Health's Services Section 
                 </h2>
 
@@ -102,7 +102,6 @@
                 </div>
             </div>
         </section>
-    </main>
 
     <footer>
         <div class="container">
