--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
     <header>
-        <img src="images/health-8168788_1920_batcheditor_fotor.jpg"
-         class="banner">
+        <img src="images/health-8168788_1920_batcheditor_fotor.jpg" alt="Hands Clasped"        class="banner">
         <div class="container">
             <h1 class="Title-header">Ministry of Health </h1>
             <nav>
-                <img src="" class="Navigation">
+                <div class="Navigation"></div>
                 <ul class="index-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -39,9 +38,6 @@
                   <p>Our mission is to improve the health and well-being of all citizens </p>
 				  <p>By providing accessible, quality healthcare, promoting health education, and ensuring a sustainable health system.</p>
                   <p>Explore our website to learn more about the services we offer, recent health updates, and tips for maintaining a healthy lifestyle.</p>
-				  
-                
-				<img src="">
             </div>
         </section>
 
@@ -49,7 +45,7 @@
             <div class="container">
                 <h3>Explore Our Services</h3>
                 <div class="cta-buttons">
-                    <img src="" class="Footer">
+                    <div class="Footer"></div>
                     <a href="health_services.html" class="button">Health Services</a>
                     <a href="public_services.html" class="button">Latest News</a>
                 </div>
