--- a/testimonials.html
+++ b/testimonials.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <img src="" class="Testim">
-        <div class="container">
+        <div class="Testim"></div>
+        <div class="container"></div>
             <h1 class="Testi-h1">Testimonials</h1>
             <nav>
                 <ul>
@@ -26,7 +26,6 @@
 					
                 </ul>
             </nav>
-        </div>
     </header>
 
     <main>
@@ -56,27 +55,25 @@
 		The staff were friendly, and the process was smooth and efficient. 
 		They made sure I was informed and at ease throughout the entire procedure. 
 		I’m grateful and pleased for their excellent service and would highly recommend the department." - Bree Williams</p>
-    </div>
+
 	
 </div>
 <br>
 
         <section id="cta">
-            <div class="container">
+            <div class="container"></div>
                 <h3>Testimonials</h3>
                 <div class="cta-buttons">
                     <a href="health_services.html" class="button">Health Services</a>
                     <a href="news.html" class="button">Latest News</a>
                 </div>
-            </div>
         </section>
     </main>
 
     <footer>
-        <div class="container">
+        <div class="container"></div>
             <p>&copy; 2024 Ministry of Health, Trinidad and Tobago. All Rights Reserved.</p>
             <p><a href="about.html">Contact Us</a> | <a href="about.html">Privacy Policy</a></p>
-        </div>
     </footer>
 </body>
 </html>
