--- a/public_services.html
+++ b/public_services.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="" class="public-service">
+        <div class="public-service"></div>
         <div class="container">
             <h1 class="pub-h1">Public Services</h1>
             <nav>
